# orrin_v3

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  ORRIN_ACTIVITY_REPORT.md  README.md  SECURITY.md  docker-compose.yml  expose_orrin.command  main.py  pyproject.toml  pytest.ini  repo_tree.txt  requirements.txt  reset_orrin.py  run_orrin.bat  run_orrin.sh  start_orrin.command  tailscale_funnel.command  tunnel_url.txt  watchdogs.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
backend/: .gitignore  README.md  __init__.py  main.py  requirements.txt  telemetry_bridge.py
brain/: ORRIN_loop.py  data_schema.py  events.py  goal_io.py  idea_service.py  memory_io.py  paths.py  run_config.py  version.py
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLAIMS_AND_EVIDENCE.md  CONFIGURATION.md  DESKTOP_APP_PLAN_2026-06-14.md  DOC_ARCHIVE_CHECKLIST_2026-07-01.md  EXPLORE_EXPLOIT_VALUE_PLAN_2026-06-16.md  MASTER_STATUS_2026-07-07.md  NEXT_RUN_TESTS.md  README.md  RUN_AUDIT_REPORT_2026-06-15.md  RUN_AUDIT_REPORT_2026-06-16.md  SYMBOLIC_FIRST_PLAN_2026-06-14.md  UI_AUDIT_REMEDIATION_PLAN_2026-06-14.md  UI_AUDIT_REPORT_2026-06-14.md  orrin-field-guide.html  orrin_embodiment_architecture.md
frontend/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
goals/: __init__.py  api.py  cli.py  events.py  goals_daemon.py  health.py  locks.py  metrics.py  model.py  policy.py  registry.py  runner.py  schema.py  snapshot.py  snapshots.py  store.py  triggers.py  utils.py  wal.py
memory/: compaction.py  config.py  embedder.py  health.py  ingest.py  integrations.py  media.py  memory_daemon.py  metrics.py  models.py  novelty.py  retrieval.py  strength.py  wal.py
observability/: dashboard_server.py  health_telemetry.py  (+3 more)
(+2109 files in other folders)
